--- a/index.html
+++ b/index.html
@@ -27,18 +27,20 @@
             <h2>Text aside</h2>
         </div>
         <div class="main">
-            <h2>TITLE HEADING </h2>
+          <h3>TITLE HEADING 1 </h3>
             <p></p><br></br>
             <div class="media flipped">
                 <div class="image"><img src="https://placehold.it/350x150" alt="placeholder"></div>
                 <div class="content">Descriçao 1, 23 Outubro, 2018.</div>
             </div>
             <p></p>
+           <h3>TITLE HEADING 2 </h3>
             <div class="media flipped">
                 <div class="image"><img src="https://placehold.it/350x150" alt="placeholder"></div>
                 <div class="content">Descriçao 2, 23 Outubro, 2018</div>
             </div>
             <p></p>
+            <h3>TITLE HEADING 3 </h3>
             <div class="media flipped">
                 <div class="image"><img src="https://placehold.it/350x150" alt="placeholder"></div>
                 <div class="content">Descriçao 3, 23 Outubro, 2018</div>
